# HuffmanCoding

./: CMakeLists.txt  README.md  file_list.txt  huffman.cpp  huffman.h  inp.txt  main.cpp  minHeap.cpp  run.bat  sideFunc.cpp  sideFunc.h  test.cpp  test.h
Compressed/: a.huf
data/compressed/: aaa.huf  alphabet.huf  random.huf
data/compressed/adaptiveHuffman/: aaa.huf  alphabet.huf  random.huf
data/result/adaptiveHuffman/: result_userSample.txt
data/result/staticHuffman/: result_userSample.txt
include/: AdaptiveHuffmanCoding.h  huffman.h  minHeap.h  test.h
src/: AdaptiveHuffmanCoding.cpp  huffman.cpp  main.cpp  minHeap.cpp  sideFunc.cpp  test.cpp
